[workspace]
resolver = "2"

members = [
    "benchmarker",
    "k-cache",
    "rmem",
    "rmemstore",
    "rmemstore-messages",
    "rmemstored",
]

[workspace.package]
version = "0.1.0"
authors = ["kvc0"]
repository = "https://github.com/kvc0/rmemstore"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
keywords = ["cache", "service", "performance"]
categories = ["web-programming"]

[workspace.dependencies]
# Local workspace packages
rmemstore-messages              = { path = "rmemstore-messages" }
k-cache                         = { path = "k-cache" }
rmemstore                       = { path = "rmemstore" }

ahash                           = { version = "0.8" }
bytes                           = { version = "1.6", features = ["serde"] }
criterion                       = { version = "0.5", features = ["html_reports"] }
clap                            = { version = "4", features = ["derive", "env"] }
env_logger                      = { version = "0.11" }
histogram                       = { version = "0.11" }
k-lock                          = { version = "0.2" }
log                             = { version = "0.4" }
mio                             = { version = "1.0" }
moka                            = { version = "0.12" }
protosocket                     = { version = "0.5" }
protosocket-prost               = { version = "0.5" }
protosocket-server              = { version = "0.5" }
prost                           = { version = "0.13" }
prost-build                     = { version = "0.13" }
rand                            = { version = "0.8" }
serde                           = { version = "1.0" }
serde_json                      = { version = "1.0" }
thiserror                       = { version = "1" }
test-log                        = { version = "0.2" }
tokio                           = { version = "1.39" }
tikv-jemallocator               = { version = "0.6" }
