[workspace]
resolver = "2"

members = [
    "benchmarker",
    "k-cache",
    "rmemstore",
    "rmemstore-messages",
    "rmemstored",
    "rms",
    "signals",
]

[profile.release]
# Include debug symbols for flame graphs and tracebacks
debug = true
# We only have a couple cores on the builder anyway, and the default of 16
# can be reduced further to help it notice more possible optimizations.
codegen-units = 1
# https://llvm.org/docs/LinkTimeOptimization.html
# let's link the best binary science knows how to link
lto = "fat"

[workspace.package]
version = "0.1.4"
authors = ["kvc0"]
repository = "https://github.com/kvc0/rmemstore"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
keywords = ["cache", "service", "performance"]
categories = ["web-programming"]

[workspace.dependencies]
# Local workspace packages
rmemstore-messages              = { path = "rmemstore-messages", version = "0" }
k-cache                         = { path = "k-cache", version = "0" }
rmemstore                       = { path = "rmemstore", version = "0" }
signals                         = { path = "signals", version = "0" }

ahash                           = { version = "0.8" }
bytes                           = { version = "1.6", features = ["serde"] }
criterion                       = { version = "0.5", features = ["html_reports"] }
clap                            = { version = "4", features = ["derive", "env"] }
env_logger                      = { version = "0.11" }
futures                         = { version = "0.3" }
histogram                       = { version = "0.11" }
k-lock                          = { version = "0.2" }
log                             = { version = "0.4" }
moka                            = { version = "0.12" }
num_cpus                        = { version = "1.16" }
parse-size                      = { version = "1" }
protosocket                     = { version = "0.7" }
protosocket-prost               = { version = "0.7" }
protosocket-rpc                 = { version = "0.7" }
prost                           = { version = "0.13" }
prost-build                     = { version = "0.13" }
rand                            = { version = "0.8" }
serde                           = { version = "1.0" }
serde_json                      = { version = "1.0" }
signal-hook                     = { version = "0.3" }
thiserror                       = { version = "1" }
test-log                        = { version = "0.2" }
tokio                           = { version = "1.39" }
tikv-jemallocator               = { version = "0.6" }
