[package]
name = "benchmarker"
version = "0.1.1"
edition = "2021"
publish = false

[dependencies]
rmemstore-messages              = { workspace = true }

bytes                           = { workspace = true }
log                             = { workspace = true }
env_logger                      = { workspace = true }
histogram                       = { workspace = true }
protosocket                     = { workspace = true }
protosocket-prost               = { workspace = true }
rand                            = { workspace = true }
tokio                           = { workspace = true, features = ["full"] }
