[package]
name = "k-cache"
description = "internal cache implementation for rmemstore"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
k-lock                          = { workspace = true }
log                             = { workspace = true }
