[package]
name = "k-cache"
description = "internal cache implementation for rmemstore"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
bench = false

[[bench]]
name = "bench"
harness = false

[dependencies]
k-lock                          = { workspace = true }
log                             = { workspace = true }

[dev-dependencies]
criterion                       = { workspace = true }
moka                            = { workspace = true, features = ["sync"] }
rand                            = { workspace = true }
