[package]
name = "rmemstore-messages"
description = "message definitions for rmemstore"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
bench = false

[dependencies]
bytes                           = { workspace = true }
prost                           = { workspace = true }

[build-dependencies]
prost-build                     = { workspace = true }
