[package]
name = "rmemstore"
description = "client for rmemstored"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rmemstore-messages              = { workspace = true }

bytes                           = { workspace = true }
log                             = { workspace = true }
env_logger                      = { workspace = true }
histogram                       = { workspace = true }
k-lock                          = { workspace = true }
protosocket                     = { workspace = true }
protosocket-prost               = { workspace = true }
serde                           = { workspace = true, features = ["derive"] }
thiserror                       = { workspace = true }
tokio                           = { workspace = true }
