[package]
name = "rmemstored"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
k-cache                         = { workspace = true }
rmemstore-messages              = { workspace = true }
signals                         = { workspace = true }

ahash                           = { workspace = true }
bytes                           = { workspace = true }
clap                            = { workspace = true }
env_logger                      = { workspace = true }
futures                         = { workspace = true }
k-lock                          = { workspace = true }
log                             = { workspace = true }
num_cpus                        = { workspace = true }
parse-size                      = { workspace = true }
protosocket                     = { workspace = true }
protosocket-prost               = { workspace = true }
protosocket-rpc                 = { workspace = true }
rand                            = { workspace = true }
thiserror                       = { workspace = true }
tokio                           = { workspace = true, features = ["full"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator               = { workspace = true }
