[package]
name = "rms"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
rmemstore                       = { workspace = true }

bytes                           = { workspace = true }
clap                            = { workspace = true }
env_logger                      = { workspace = true }
log                             = { workspace = true }
serde                           = { workspace = true, features = ["derive"] }
serde_json                      = { workspace = true }
tokio                           = { workspace = true, features = ["full"] }
