[package]
name = "signals"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log              = { workspace = true }
signal-hook      = { workspace = true }
tokio            = { workspace = true }
